# my_programming_crew

./: .env_example  .gitignore  README.md  pyproject.toml
output/: README.md  account_core.py  app_state.py  config.py  funds_management.py  main_app.py  portfolio_valuation.py  pyproject.toml  reporting_and_pricing.py  test_app.py  test_integration.py  trading_engine.py  transaction_core.py  transaction_factory.py
output/components/: account_component.py  funds_component.py  portfolio_component.py  trading_component.py  transaction_history_component.py
output/utils/: helpers.py  logger.py
src/my_programming_crew/: crew.py  main.py
src/my_programming_crew/config/: agents.yaml  tasks.yaml
