[project]
name = "my_programming_crew"
version = "0.1.0"
description = "my_programming_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.6.1",
    "litellm>=1.0.0",
    "langchain-openai>=0.0.5",
]

[project.scripts]
my_programming_crew = "my_programming_crew.main:run"
run_crew = "my_programming_crew.main:run"
train = "my_programming_crew.main:train"
replay = "my_programming_crew.main:replay"
test = "my_programming_crew.main:test"
run_with_trigger = "my_programming_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
