[project]
name = "trading-simulation-platform"
version = "1.0.0"
description = "Complete Stock Trading & Portfolio Management System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]

[project.scripts]
trading-app = "main_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
